--- a/src/data/starships.yaml
+++ b/src/data/starships.yaml
@@ -798,7 +798,7 @@
   weapons: 58
   index: Age of Rebellion Core Rulebook:280
   generatedId: 4163cb4f-0e7c-498f-8215-4f0d2b494781
-- category: "Heavy Freighter\n"
+- category: Heavy Freighter
   name: Temple-Class Heavy Freighter
   silhouette: 6
   speed: 1
