--- a/src/data/armor.yaml
+++ b/src/data/armor.yaml
@@ -2,7 +2,7 @@
 - name: A/KT Mountaineer Armor
   defense: 1
   soak: 1
-  price: 1,800
+  price: 1800
   encumbrance: 3
   hp: 2
   rarity: 6
@@ -11,7 +11,8 @@
 - name: A/KT Shockrider Crash Suit
   defense: 0
   soak: 2
-  price: 3,000
+  price: 3000
+  restricted: false
   encumbrance: 2
   hp: 1
   rarity: 3
@@ -20,7 +21,8 @@
 - name: A/KT Shockrider Crash Suit
   defense: 0
   soak: 2
-  price: 3,000
+  price: 3000
+  restricted: false
   encumbrance: 2
   hp: 1
   rarity: 3
@@ -30,6 +32,7 @@
   defense: 0
   soak: 0
   price: 100
+  restricted: false
   encumbrance: 0
   hp: 1
   rarity: 2
@@ -38,7 +41,8 @@
 - name: A/KT Wing Commander Armored Flight Suit
   defense: 1
   soak: 1
-  price: 1,500
+  price: 1500
+  restricted: false
   encumbrance: 3
   hp: 1
   rarity: 6
@@ -48,6 +52,7 @@
   defense: 0
   soak: 1
   price: 500
+  restricted: false
   encumbrance: 2
   hp: 1
   rarity: 1
@@ -56,7 +61,8 @@
 - name: Arakyd Industries PX-1 "Battlement" Powered Armor
   defense: 1
   soak: 3
-  price: (R) 9,000
+  price: 9000
+  restricted: true
   encumbrance: 3
   hp: 3
   rarity: 9
@@ -65,7 +71,8 @@
 - name: Armored Clothing
   defense: 1
   soak: 1
-  price: 1,000
+  price: 1000
+  restricted: false
   encumbrance: 3
   hp: 1
   rarity: 6
@@ -74,7 +81,8 @@
 - name: Armored Robes
   defense: 1
   soak: 2
-  price: (R) 4,500
+  price: 4500
+  restricted: true
   encumbrance: 5
   hp: 2
   rarity: 8
@@ -84,6 +92,7 @@
   defense: 0
   soak: 0
   price: 25
+  restricted: false
   encumbrance: 0
   hp: 0
   rarity: 0
@@ -93,6 +102,7 @@
   defense: 0
   soak: 1
   price: 300
+  restricted: false
   encumbrance: 3
   hp: 0
   rarity: 2
@@ -102,6 +112,7 @@
   defense: 0
   soak: 1
   price: 200
+  restricted: false
   encumbrance: 3
   hp: 1
   rarity: 3
@@ -111,6 +122,7 @@
   defense: 0
   soak: 0
   price: 250
+  restricted: false
   encumbrance: 2
   hp: 0
   rarity: 4
@@ -119,7 +131,8 @@
 - name: Capari-Series Padded Beast Armor
   defense: 0
   soak: 2
-  price: 2,500
+  price: 2500
+  restricted: false
   encumbrance: 4
   hp: 0
   rarity: 5
@@ -129,6 +142,7 @@
   defense: 0
   soak: 0
   price: 30
+  restricted: false
   encumbrance: 1
   hp: 0
   rarity: 0
@@ -138,6 +152,7 @@
   defense: 0
   soak: 2
   price: 300
+  restricted: false
   encumbrance: 1
   hp: 0
   rarity: 9
@@ -146,7 +161,8 @@
 - name: Cloaking Coat
   defense: 0
   soak: 1
-  price: (R) 550
+  price: 550
+  restricted: true
   encumbrance: 4
   hp: 1
   rarity: 8
@@ -156,6 +172,7 @@
   defense: 0
   soak: 1
   price: 150
+  restricted: false
   encumbrance: 1
   hp: 0
   rarity: 2
@@ -164,7 +181,8 @@
 - name: Corellian Arms "Storm" Charge Suit
   defense: 0
   soak: 2
-  price: 2,000
+  price: 2000
+  restricted: false
   encumbrance: 3
   hp: 0
   rarity: 6
@@ -173,7 +191,8 @@
 - name: Cresh "Luck" Armor
   defense: 0
   soak: 2
-  price: 1,000
+  price: 1000
+  restricted: false
   encumbrance: 4
   hp: 1
   rarity: 5
@@ -182,7 +201,8 @@
 - name: Creshaldyne Mk.IV Riot Armor
   defense: 1
   soak: 1
-  price: (R) 1,850
+  price: 1850
+  restricted: true
   encumbrance: 3
   hp: 1
   rarity: 6
@@ -191,7 +211,8 @@
 - name: Destri-Series Laminate Beast Armor
   defense: 0
   soak: 4
-  price: 8,500
+  price: 8500
+  restricted: false
   encumbrance: 7
   hp: 1
   rarity: 7
@@ -201,6 +222,7 @@
   defense: 0
   soak: 0
   price: 400
+  restricted: false
   encumbrance: 2
   hp: 0
   rarity: 6
@@ -210,6 +232,7 @@
   defense: 0
   soak: 2
   price: 750
+  restricted: false
   encumbrance: 2
   hp: 1
   rarity: 2
@@ -218,7 +241,8 @@
 - name: Flare Jacket
   defense: 0
   soak: 1
-  price: 1,500
+  price: 1500
+  restricted: false
   encumbrance: 3
   hp: 0
   rarity: 8
@@ -227,7 +251,8 @@
 - name: H-Series Megafauna Carriage
   defense: 1
   soak: 0
-  price: 5,500
+  price: 5500
+  restricted: false
   encumbrance: 5
   hp: 2
   rarity: 7
@@ -236,7 +261,8 @@
 - name: Hauling Harness
   defense: 1
   soak: 1
-  price: 1,000
+  price: 1000
+  restricted: false
   encumbrance: 3
   hp: 2
   rarity: 6
@@ -245,7 +271,8 @@
 - name: Heavy Battle Armor
   defense: 1
   soak: 2
-  price: (R) 5,000
+  price: 5000
+  restricted: false
   encumbrance: 6
   hp: 4
   rarity: 7
@@ -255,6 +282,7 @@
   defense: 0
   soak: 1
   price: 50
+  restricted: false
   encumbrance: 1
   hp: 0
   rarity: 0
@@ -264,6 +292,7 @@
   defense: 1
   soak: 0
   price: 750
+  restricted: false
   encumbrance: 2
   hp: 0
   rarity: 8
@@ -272,7 +301,8 @@
 - name: Hutt Shell Armor
   defense: 2
   soak: 2
-  price: (R) 25,000
+  price: 25000
+  restricted: true
   encumbrance: 6
   hp: 4
   rarity: 9
@@ -281,7 +311,8 @@
 - name: Jedi Battle Armor
   defense: 1
   soak: 2
-  price: (R) 7,500
+  price: 7500
+  restricted: true
   encumbrance: 6
   hp: 4
   rarity: 9
@@ -290,7 +321,8 @@
 - name: Jedi Temple Guard Armor
   defense: 2
   soak: 1
-  price: (R) 12,000
+  price: 12000
+  restricted: true
   encumbrance: 4
   hp: 3
   rarity: 10
@@ -299,7 +331,8 @@
 - name: Jedi Training Suit
   defense: 0
   soak: 2
-  price: (R) 400
+  price: 400
+  restricted: true
   encumbrance: 6
   hp: 0
   rarity: 9
@@ -308,7 +341,8 @@
 - name: Kamperdine Custom Tailored Armored Jackets
   defense: 0
   soak: 2
-  price: 6,200
+  price: 6200
+  restricted: false
   encumbrance: 1
   hp: 0
   rarity: 7
@@ -317,7 +351,8 @@
 - name: Kav-Dann Power Armor
   defense: 2
   soak: 2
-  price: (R) 13,500
+  price: 13500
+  restricted: true
   encumbrance: 4
   hp: 6
   rarity: 7
@@ -327,6 +362,7 @@
   defense: 1
   soak: 1
   price: 500
+  restricted: false
   encumbrance: 3
   hp: 0
   rarity: 5
@@ -335,7 +371,8 @@
 - name: Laminate Armor
   defense: 0
   soak: 2
-  price: 2,500
+  price: 2500
+  restricted: false
   encumbrance: 4
   hp: 3
   rarity: 5
@@ -345,6 +382,7 @@
   defense: 0
   soak: 1
   price: 525
+  restricted: false
   encumbrance: 2
   hp: 1
   rarity: 6
@@ -353,7 +391,8 @@
 - name: Leviathan Power Armor
   defense: 2
   soak: 2
-  price: 15,000
+  price: 15000
+  restricted: false
   encumbrance: 8
   hp: 1
   rarity: 8
@@ -362,7 +401,8 @@
 - name: Loronar Corporation Mk.II "Steelskin" Anti-Concussive Armor
   defense: 0
   soak: 3
-  price: (R) 6,500
+  price: 6500
+  restricted: true
   encumbrance: 8
   hp: 1
   rarity: 7
@@ -371,7 +411,8 @@
 - name: "Mechanic's Utility Suit"
   defense: 0
   soak: 2
-  price: 1,175
+  price: 1175
+  restricted: false
   encumbrance: 5
   hp: 1
   rarity: 3
@@ -380,7 +421,8 @@
 - name: Merr-Sonn N-57 Armor
   defense: 0
   soak: 2
-  price: 3,000
+  price: 3000
+  restricted: false
   encumbrance: 5
   hp: 5
   rarity: 6
@@ -389,7 +431,8 @@
 - name: Mimetic Suit
   defense: 1
   soak: 1
-  price: (R) 8,000
+  price: 8000
+  restricted: true
   encumbrance: 2
   hp: 2
   rarity: 8
@@ -399,6 +442,7 @@
   defense: 0
   soak: 0
   price: 750
+  restricted: false
   encumbrance: 1
   hp: 3
   rarity: 7
@@ -408,6 +452,7 @@
   defense: 0
   soak: 1
   price: 100
+  restricted: false
   encumbrance: 1
   hp: 0
   rarity: 4
@@ -417,6 +462,7 @@
   defense: 0
   soak: 1
   price: 300
+  restricted: false
   encumbrance: 3
   hp: 1
   rarity: 2
@@ -426,6 +472,7 @@
   defense: 0
   soak: 2
   price: 500
+  restricted: false
   encumbrance: 2
   hp: 0
   rarity: 1
@@ -435,6 +482,7 @@
   defense: 0
   soak: 0
   price: 50
+  restricted: false
   encumbrance: 0
   hp: 0
   rarity: 4
@@ -443,7 +491,8 @@
 - name: Personal Deflector Shield
   defense: 2
   soak: 0
-  price: 10,000
+  price: 10000
+  restricted: false
   encumbrance: 3
   hp: 0
   rarity: 8
@@ -453,6 +502,7 @@
   defense: 0
   soak: 1
   price: 300
+  restricted: false
   encumbrance: 1
   hp: 1
   rarity: 6
@@ -461,7 +511,8 @@
 - name: Powered Capacitive Armor
   defense: 1
   soak: 1
-  price: (R) 3,000
+  price: 3000
+  restricted: true
   encumbrance: 4
   hp: 2
   rarity: 8
@@ -471,6 +522,7 @@
   defense: 0
   soak: 1
   price: 850
+  restricted: false
   encumbrance: 2
   hp: 2
   rarity: 4
@@ -480,6 +532,7 @@
   defense: 0
   soak: 1
   price: 500
+  restricted: false
   encumbrance: 2
   hp: 0
   rarity: 5
@@ -489,6 +542,7 @@
   defense: 0
   soak: 2
   price: 950
+  restricted: false
   encumbrance: 3
   hp: 2
   rarity: 4
@@ -497,7 +551,8 @@
 - name: Sakiyan Shadowsuit
   defense: 0
   soak: 1
-  price: 2,500
+  price: 2500
+  restricted: false
   encumbrance: 1
   hp: 1
   rarity: 8
@@ -506,7 +561,8 @@
 - name: Second Skin Armor
   defense: 1
   soak: 1
-  price: 2,000
+  price: 2000
+  restricted: false
   encumbrance: 2
   hp: 0
   rarity: 7
@@ -515,7 +571,8 @@
 - name: "Smuggler's Trenchcoat"
   defense: 1
   soak: 1
-  price: 1,650
+  price: 1650
+  restricted: false
   encumbrance: 3
   hp: 0
   rarity: 7
@@ -524,7 +581,8 @@
 - name: SoroSuub P-14 Hazardous Industry Suit
   defense: 0
   soak: 2
-  price: 1,000
+  price: 1000
+  restricted: false
   encumbrance: 7
   hp: 2
   rarity: 4
@@ -533,7 +591,8 @@
 - name: Taggeco Protector 1 Combat Armor
   defense: 1
   soak: 2
-  price: (R) 5,500
+  price: 5500
+  restricted: true
   encumbrance: 4
   hp: 3
   rarity: 7
@@ -542,7 +601,8 @@
 - name: TX-3 Combat Flight Suit
   defense: 1
   soak: 0
-  price: (R) 3,000
+  price: 3000
+  restricted: true
   encumbrance: 4
   hp: 2
   rarity: 6
@@ -551,7 +611,8 @@
 - name: Type III "Berethron" Personal Modular Armor
   defense: 1
   soak: 1
-  price: (R) 1,250
+  price: 1250
+  restricted: true
   encumbrance: 3
   hp: 3
   rarity: 6
@@ -560,7 +621,8 @@
 - name: Verpine Fiber Ultramesh Armor
   defense: 0
   soak: 1
-  price: 3,000
+  price: 3000
+  restricted: false
   encumbrance: 3
   hp: 2
   rarity: 5
@@ -569,7 +631,8 @@
 - name: Armored Drop Suit
   defense: 1
   soak: 1
-  price: 7,500
+  price: 7500
+  restricted: false
   encumbrance: 6
   hp: 2
   rarity: 7
@@ -578,7 +641,8 @@
 - name: Hunter's Trophy Armor (completed)
   defense: 0
   soak: 2
-  price: (R) 2,000
+  price: 2000
+  restricted: true
   encumbrance: 4
   hp: 1
   rarity: 9
@@ -587,7 +651,8 @@
 - name: Hunter's Trophy Armor (custom-made)
   defense: 0
   soak: 2
-  price: (R) 1,000
+  price: 1000
+  restricted: true
   encumbrance: 4
   hp: 1
   rarity: 6
@@ -596,7 +661,8 @@
 - name: Mandalorian Armor
   defense: 1
   soak: 2
-  price: (R) 6,000
+  price: 6000
+  restricted: true
   encumbrance: 6
   hp: 5
   rarity: 8
@@ -605,7 +671,8 @@
 - name: CF-9 Republic Naval Flight Suit
   defense: 1
   soak: 1
-  price: (R) 1,200
+  price: 1200
+  restricted: true
   encumbrance: 3
   hp: 2
   rarity: 6
@@ -614,7 +681,8 @@
 - name: '"Gundark" Scav-Suit'
   defense: 1
   soak: 1
-  price: 3,000
+  price: 3000
+  restricted: false
   encumbrance: 4
   hp: 2
   rarity: 6
@@ -624,6 +692,7 @@
   defense: 1
   soak: 0
   price: 150
+  restricted: false
   encumbrance: 1
   hp: 0
   rarity: 2
@@ -632,7 +701,8 @@
 - name: HT-77 Cold Assault Armor
   defense: 0
   soak: 2
-  price: (R) 4,000
+  price: 4000
+  restricted: true
   encumbrance: 6
   hp: 2
   rarity: 7
@@ -641,7 +711,8 @@
 - name: Jedi Commander Armor
   defense: 1
   soak: 2
-  price: (R) 5,000
+  price: 5000
+  restricted: true
   encumbrance: 5
   hp: 3
   rarity: 8
@@ -650,7 +721,8 @@
 - name: Mk II "Hotspot" Insulated Armor
   defense: 0
   soak: 2
-  price: (R) 5,500
+  price: 5500
+  restricted: true
   encumbrance: 6
   hp: 2
   rarity: 7
@@ -659,7 +731,8 @@
 - name: Phase I ARC Trooper Armor
   defense: 1
   soak: 2
-  price: (R) 6,000
+  price: 6000
+  restricted: true
   encumbrance: 5
   hp: 4
   rarity: 7
@@ -668,7 +741,8 @@
 - name: Phase I Clone Trooper Armor
   defense: 0
   soak: 2
-  price: (R) 2,000
+  price: 2000
+  restricted: true
   encumbrance: 4
   hp: 3
   rarity: 6
@@ -677,7 +751,8 @@
 - name: Scavenged Clone Armor
   defense: 0
   soak: 2
-  price: (R) 1,000
+  price: 1000
+  restricted: true
   encumbrance: 5
   hp: 2
   rarity: 4
