Fix DoR YAML errors

--- a/src/data/species.yaml
+++ b/src/data/species.yaml
@@ -198,7 +198,7 @@
 - name: Drabatan
   player: Yes
   index: Dawn of Rebellion:92
-  generatedID: 43270309-c549-460b-a9d6-ae14ff0298f9
+  generatedId: 43270309-c549-460b-a9d6-ae14ff0298f9
 - name: Dragonsnake
   player: No
   index: Nexus of Power:28
