--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "theouterrim",
   "version": "0.0.1",
   "dependencies": {
+    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.3.0",
     "@material-ui/core": "^4.9.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.0",
