--- a/src/data/adversaries.yaml
+++ b/src/data/adversaries.yaml
@@ -63,7 +63,7 @@
   equipment: Activv1 Riot Shield, Binders, Blaster Carbine, Built-in comlink, Stun Baton
   index: Strongholds of Resistance:139
   generatedId: 47d53dd6-740a-469d-8c9b-30ac324b1ad9
-- name: 5YQ-Series Protol Droid
+- name: 5YQ-Series Protocol Droid
   level: Rival
   skills: Charm 1, Education 1, Core Worlds 1, Lore 1, Outer Rim 1, Underworld 1, Warfare 1, Xenology 1
   talents: None
