--- a/src/data/gear.yaml
+++ b/src/data/gear.yaml
@@ -688,7 +688,7 @@
   index: Desperate Allies:54
   generatedId: c53ae2ab-a04e-4ca6-989d-16a34e7d89a2
 - category: Droids
-  name: 5YQ-Series Protol Droid
+  name: 5YQ-Series Protocol Droid
   price: 5500
   restricted: false
   encumbrance: 0
