--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@material-ui/core": "^4.9.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.0",
+    "clipboard-copy": "^3.1.0",
     "gatsby": "^2.19.17",
     "gatsby-plugin-google-analytics": "^2.1.35",
     "gatsby-plugin-manifest": "^2.2.41",
