--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -657,7 +657,7 @@
 - book: Collapse of the Republic
   resource: Armor
   source: The Outer Rim
-  entered: No
+  entered: Yes
   audited: No
 - book: Collapse of the Republic
   resource: Creatures
