Add CotR adversaries armor

--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -642,7 +642,7 @@
 - book: Collapse of the Republic
   resource: Adversaries Armor
   source: The Outer Rim
-  entered: No
+  entered: Yes
   audited: No
 - book: Collapse of the Republic
   resource: Adversaries Gear
