Add CotR data - batch 1 (#102)
* Add CotR armor

* Add CotR skills

* Add CotR adversaries armor

--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -642,7 +642,7 @@
 - book: Collapse of the Republic
   resource: Adversaries Armor
   source: The Outer Rim
-  entered: No
+  entered: Yes
   audited: No
 - book: Collapse of the Republic
   resource: Adversaries Gear
@@ -657,7 +657,7 @@
 - book: Collapse of the Republic
   resource: Armor
   source: The Outer Rim
-  entered: No
+  entered: Yes
   audited: No
 - book: Collapse of the Republic
   resource: Creatures
@@ -682,7 +682,7 @@
 - book: Collapse of the Republic
   resource: Skills
   source: The Outer Rim
-  entered: No
+  entered: Yes
   audited: No
 - book: Collapse of the Republic
   resource: Species
