--- a/src/data/weapons.yaml
+++ b/src/data/weapons.yaml
@@ -3233,8 +3233,9 @@
   special: Ensnare 3, Knockdown, Limited Ammo 1
   index: Edge of the Empire Core Rulebook:164
   generatedId: 4b7c475d-a973-48f5-ac04-5a9eb807ac31
-- name: DC-15 Blaster Rifle
-  skill: Ranged [Heavy]
+- category: Energy
+  name: DC-15 Blaster Rifle
+  skill: Ranged (Heavy)
   damage: 10
   brawn: false
   crit: 3
@@ -3247,8 +3248,9 @@
   special: Cumbersome 3, Pierce 1, Stun Setting
   index: Rise of the Separatists:51
   generatedId: 8a3b41fe-87d7-4086-9954-4ee6f4cfcc59
-- name: DC-15A Blaster Carbine
-  skill: Ranged [Heavy]
+- category: Energy
+  name: DC-15A Blaster Carbine
+  skill: Ranged (Heavy)
   damage: 9
   brawn: false
   crit: 3
@@ -3261,7 +3263,8 @@
   special: Auto-Fire, Pierce 1, Stun Setting
   index: Rise of the Separatists:51
   generatedId: 94ee1276-fa88-45ab-b238-c740a29f3d27
-- name: DC-17 Hand Blaster
+- category: Energy
+  name: DC-17 Hand Blaster
   skill: Ranged (Light)
   damage: 7
   brawn: false
@@ -3275,8 +3278,9 @@
   special: Accurate 1, Stun Setting
   index: Rise of the Separatists:51
   generatedId: fc0f55ac-c387-4e06-831b-3a2cafdc6b38
-- name: Z-6 Rotary Cannon
-  skill: Ranged [Heavy]
+- category: Energy
+  name: Z-6 Rotary Cannon
+  skill: Ranged (Heavy)
   damage: 12
   brawn: false
   crit: 4
@@ -3289,7 +3293,8 @@
   special: Auto-Fire (Only), Cumbersome 3, Prepare 1
   index: Rise of the Separatists:52
   generatedId: 1acde327-a269-4dde-acd6-174205a2435d
-- name: AP-M1 Armor Piercing Grenade
+- category: Grenade
+  name: AP-M1 Armor Piercing Grenade
   skill: Ranged (Light)
   damage: 13
   brawn: false
@@ -3303,7 +3308,8 @@
   special: Blast 4, Limited Ammo 1, Pierce 4
   index: Rise of the Separatists:52
   generatedId: 71b862ae-6d21-4459-8568-1fed083a895c
-- name: BT X-42 Heavy Flame Projector
+- category: Other
+  name: BT X-42 Heavy Flame Projector
   skill: Gunnery
   damage: 10
   brawn: false
@@ -3317,7 +3323,8 @@
   special: Blast 6, Burn 4, Vicious 1
   index: Rise of the Separatists:52
   generatedId: 0e33ae11-dba2-4872-8686-24173497f13e
-- name: Mk II EMP Grenade
+- category: Grenade
+  name: Mk II EMP Grenade
   skill: Ranged (Light)
   damage: 8
   brawn: false
@@ -3331,7 +3338,8 @@
   special: Blast 6, Disorient 3, Ion, Limited Ammo 1
   index: Rise of the Separatists:53
   generatedId: 7cdaf7ff-235d-4f77-97bf-d598ccd66446
-- name: Model 201 Mortar System
+- category: Other
+  name: Model 201 Mortar System
   skill: Gunnery
   damage: 15
   brawn: false
@@ -3345,7 +3353,8 @@
   special: Blast 12, Breach 1, Limited Ammo 5, Prepare 2, Slow-Firing 1
   index: Rise of the Separatists:53
   generatedId: 00511104-c989-4476-9176-352109557c47
-- name: RPS-6 Rocket Launcher
+- category: Other
+  name: RPS-6 Rocket Launcher
   skill: Gunnery
   damage: 22
   brawn: false
@@ -3359,7 +3368,8 @@
   special: Blast 14, Breach 1, Cumbersome 4, Guided 2, Limited Ammo 7
   index: Rise of the Separatists:53
   generatedId: 392a3c2c-2fe5-4fe3-b829-836f8db04bba
-- name: M3 Bulwark Blast Shield
+- category: Melee
+  name: M3 Bulwark Blast Shield
   skill: Melee
   damage: 1
   brawn: true
@@ -3373,7 +3383,8 @@
   special: Cumbersome 3, Defensive 2, Deflection 2
   index: Rise of the Separatists:53
   generatedId: 2f5e7348-6b27-451c-a74a-bf962766193a
-- name: M8 Combat Knife
+- category: Melee
+  name: M8 Combat Knife
   skill: Melee
   damage: 1
   brawn: true
@@ -3387,7 +3398,8 @@
   special: Accurate 1, Pierce 1
   index: Rise of the Separatists:54
   generatedId: 6287722e-afa2-4618-9d54-478835c4134c
-- name: TZ-97 "Zapper" Shock Baton
+- category: Melee
+  name: TZ-97 "Zapper" Shock Baton
   skill: Melee
   damage: 5
   brawn: false
@@ -3401,7 +3413,8 @@
   special: Concussive 1, Stun Damage
   index: Rise of the Separatists:54
   generatedId: 048518e0-6461-4aa1-9931-48da138400dd
-- name: Basic Lightsaber
+- category: Lightsaber
+  name: Basic Lightsaber
   skill: Lightsaber
   damage: 6
   brawn: false
@@ -3415,7 +3428,8 @@
   special: Breach 1, Sunder
   index: Rise of the Separatists:54
   generatedId: 9c0775b6-994d-47cd-a8a8-139af9f8b1fd
-- name: Shoto
+- category: Lightsaber
+  name: Shoto
   skill: Lightsaber
   damage: 5
   brawn: false
