--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -3872,7 +3872,7 @@
 - book: Rise of the Separatists
   resource: Abilities
   source: The Outer Rim
-  entered: No
+  entered: Yes
   audited: No
 - book: Rise of the Separatists
   resource: Adversaries
