Add CaM weapons

--- a/src/data/content-status.yaml
+++ b/src/data/content-status.yaml
@@ -806,7 +806,7 @@
   audited: No
 - book: Cyphers and Masks
   resource: Weapons
-  source: Viluppo
+  source: The Outer Rim
   entered: Yes
   audited: No
 - book: Dangerous Covenants
